[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Floor 1/EpicLaser.gd" type="Script" id=1]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 0, 0 )

[node name="EpicLaser" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.878431, 0.184314, 0.0431373, 1 )

[node name="LaserArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaserArea"]
modulate = Color( 0.243137, 1, 0, 1 )
shape = SubResource( 1 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[node name="DissapearTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AppearTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="LaserArea" to="." method="_on_LaserArea_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="DissapearTimer" to="." method="_on_DissapearTimer_timeout"]
[connection signal="timeout" from="AppearTimer" to="." method="_on_AppearTimer_timeout"]
